css/style.css
@charset "UTF-8";
/*CSS Document*/

body {
  font: 15px/1.5 Arial, Helvetica, sans-serif;
  padding: 0;
  margin: 0;
  background-color: #ffffff;
}

/* Global */
.container {
  width: 80%;
  margin: auto;
  overflow: hidden;
}

ul {
  padding: 0;
  margin: 0;
}

a {
  color: #ff8c00;
}

.pixel {
	image-rendering: pixelated;
	image-rendering: crisp-edges;
	image-rendering: -moz-crisp-edges;
	image-rendering: -o-crisp-edges;
	/*image-rendering: -webkit-optimize-contrast;*/
	-ms-interpolation-mode: nearest-neighbor;
}

/* Header */
header {
  background-color: #555555;
  color: #ffffff;
  padding-top: 20px;
  height: 65px;
  border-bottom: #ff8c00 5px solid;
}

header nav a {
  color: #ffffff;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 16px;
}

header li {
  float: left;
  display: inline;
  padding: 2px 20px 0 0;
}

header #site-title {
  float: left;
}

header #site-title h1 {
  margin: 0;
}

header #site-title h1 a {
  color: #ffffff;
  text-decoration: none;
}

header nav {
  float: right;
  margin-top: 10px;
}

header .highlight, header .current a {
  color: #ff8c00;
  font-weight: bold;
}

header a:hover {
  font-weight: bold;
  color: #ffffff;
}

/* Bookmarks */

#bookmarks {

}

/* Footer */

footer {
  padding: 20px;
  margin-top: 20px;
  color: #ffffff;
  background-color: #ff8c00;
  text-align: center;
}

footer a {
  text-decoration: underline;
  color: #ffffff
}

footer p {
  margin-top: 10px;
  margin-bottom: 0px;
}

/* 404 */
#error404 p#giant {
  font-size: 6em;
  font-weight: bold;
  padding: 0;
  margin: 0;
}

#error404 h1 {
  padding: 0;
  margin: 0;
}

/* Media Queries */
@media(max-width: 768px) {
  header #site-title, header nav, header nav li, #bookmarks div, #school div, .temp div, #error404 div {
    float: none;
    text-align: center;
    width: 100%;
  }

  header {
    padding-bottom: 34px;
  }
}

